--- a/src/weather_app.css
+++ b/src/weather_app.css
@@ -2,14 +2,15 @@ body {
   width: 55%;
   height: 100%;
   border: solid 2px #24527a;
+  border-radius: 3, 5%;
   background: radial-gradient(
     circle at 18.7% 37.8%,
-    rgb(250, 250, 250) 0%,
-    rgb(225, 234, 238) 90%
+    rgb(248, 243, 243) 0%,
+    rgb(150, 194, 212) 90%
   );
 }
 html {
-  height: 70%;
+  height: 80%;
   font-family: "Poppins", sans-serif;
 }
 header {
@@ -19,9 +20,9 @@ header {
 
 h1 {
   text-align: left;
-  font-size: 34px;
+  font-size: 30px;
   line-height: 48px;
-
+  margin: 0;
   font-weight: 900;
   color: #24527a;
 }
@@ -29,14 +30,18 @@ h1 {
 h2 {
   text-align: left;
   font-weight: 900;
-  font-size: 34px;
+  font-size: 30px;
   line-height: 48px;
-  padding: 0 0 24px;
+  padding: 0 0 13px;
   color: #24527a;
 }
 
 .day {
-  text-align: left;
+  color: #24527a;
+  position: relative;
+  margin-left: 20px;
+  margin-top: 0;
+  font-size: 18px;
 }
 
 .button-container {
@@ -117,9 +122,9 @@ button:hover {
 .temperature {
   text-align: center;
 }
-#celsius,
-#fahrenheit {
-  text-decoration: none;
+
+#fahrenheit,
+#celsius {
   color: #24527a;
 }
 .source-link {
@@ -128,6 +133,17 @@ button:hover {
   position: relative;
   top: 190px;
 }
-#icon {
-  color: red;
+.active {
+  cursor: default;
+  color: #24527a;
+  text-decoration: none;
+}
+#celsius.active:hover {
+  text-decoration: none;
+}
+#description {
+  display: block;
+}
+#description:first-letter {
+  text-transform: uppercase;
 }
